test/Fail/issue5072.agda
record Foo : Set where
  cppattern                     -- Typo here
  no-eta-equality
