test/Fail/issue5072.err
issue5072.agda:3,3-3
issue5072.agda:3,3: Parse error
no-eta-equality<ERROR>

...
